Added functional tests for Subscription Controller